[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Graphics/Door.png" type="Texture" id=1]
[ext_resource path="res://Objects/NEM/DoorTile.gd" type="Script" id=2]
[ext_resource path="res://Shaders/PalSwap4.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/pal_col_1 = Color( 0.6992, 0.6992, 0.6992, 1 )
shader_param/pal_col_2 = Color( 0.6, 0.6, 0.6, 1 )
shader_param/pal_col_3 = Color( 0.8, 0.8, 0.8, 1 )
shader_param/pal_col_4 = Color( 0, 0, 0, 1 )
shader_param/replace_col_1 = Color( 0.6992, 0.6992, 0.6992, 1 )
shader_param/replace_col_2 = Color( 0.6, 0.6, 0.6, 1 )
shader_param/replace_col_3 = Color( 0.8, 0.8, 0.8, 1 )
shader_param/replace_col_4 = Color( 0, 0, 0, 1 )
shader_param/precision = 0.1
shader_param/alpha = 1.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 8 )

[sub_resource type="Animation" id=5]
resource_name = "close"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 6, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "_enable_collision"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "open"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "_enable_collision"
} ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[node name="DoorTile" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( 16, -16 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 8 )
shape = SubResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/close = SubResource( 5 )
anims/idle = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="ActArea" type="Area2D" parent="."]
position = Vector2( 16, 8 )
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActArea"]
shape = SubResource( 4 )

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="animation_finished" from="Anim" to="." method="_on_anim_finished"]
[connection signal="body_entered" from="ActArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="ActArea" to="." method="_on_body_exited"]
